--- a/vagrant/acorn_hours/templates/edittype.html
+++ b/vagrant/acorn_hours/templates/edittype.html
@@ -18,7 +18,12 @@
 
 </br>
 </br>
-<a href="{{url_for('showTypes')}}">go back</a>
+
+<div class="col-md-3">
+	<form action="{{url_for('showTypes')}}"	>
+			<input type="submit" value="Go Back" class='fsSubmitButton'>
+	</form>
+</div>
 
 		
 {% endblock %}
